# University-Work

./: .gitattributes  .gitignore  README.md  rez.txt
AI First Year/First Semester/Knowledge Representation and Reasoning/: readme.md
AI First Year/First Semester/Practical Machine Learning/: readme.md
AI First Year/First Semester/Probabilistic Programming/: readme.md
AI First Year/Second Semester/Computer Vision/: readme.md
AI First Year/Second Semester/Natural Language Processing/: readme.md
AI First Year/Second Semester/Statistics for Data Science/: readme.md
First Year/: README.md
First Year/First Semester/: README.md
First Year/First Semester/Algebric Structures in Computer Science/: README.md
First Year/First Semester/Critical and Ethical Thinking/: README.md
First Year/First Semester/Mathematical Logic/: README.md
First Year/Second Semester/: README.md
First Year/Second Semester/Data Structures/: CheatSheet_DataStructures.docx  README.md
First Year/Second Semester/Formal Language and Automata/: readme.md
First Year/Second Semester/Object-oriented programming/Labs/Project 2/: CMakeLists.txt  main.cpp
Second Year/First Semester/: readme.md
Second Year/Second Semester/: readme.md
Third Year/First Semester/Computer Graphics/Labs/L04/: 04_01_Shader.frag  04_01_Shader.vert  04_01_coord_omogene.cpp  04_02_Shader.frag  04_02_Shader.vert  04_02_indexare.cpp  04_03a_doua_VAO.cpp  04_03b_doua_VBO.cpp  04_04_Shader.frag  04_04_Shader.vert  04_04_texturare.cpp  CMakeLists.txt  L04.sln  L04.vcxproj  L04.vcxproj.filters  example.vert
Third Year/Second Semester/: readme.md
(+3386 files in other folders)
